--- a/task2/package.json
+++ b/task2/package.json
@@ -20,12 +20,14 @@
     "react-currency-format": "^1.1.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.45.1",
+    "react-input-mask": "^2.0.4",
     "react-redux": "^8.1.1",
     "styled-components": "^6.0.1",
     "typescript": "5.1.6"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.0.1",
-    "@types/react-currency-format": "^1.0.0"
+    "@types/react-currency-format": "^1.0.0",
+    "@types/react-input-mask": "^3.0.2"
   }
 }
